--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -54,7 +54,7 @@
         <script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
         {{/if}}
 
-        <script defer data-domain="whitepaper.shroomkingdom.net" src="https://plausible.io/js/plausible.js"></script>
+        <script defer data-domain="whitepaper.shroomkingdom.net" src="https://plausible.io/js/plausible.outbound-links.js"></script>
     </head>
     <body>
         <!-- Provide site root to javascript -->
